--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,3 +152,13 @@ html {
 .orange {
   background-color: orange;
 }
+
+.fade-in {
+  opacity: 0;
+}
+
+.visible {
+  transition: opacity 0.15s ease-in;
+
+  opacity: 1;
+}
