--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,13 +12,11 @@ body {
 }
 
 .selected-projects-image-blur {
-  background: rgba(255, 255, 255, 0.20);
+  background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(100px);
   transition: all 0.25s ease-in;
-  opacity:0;
- 
+  opacity: 0;
 }
-
 
 html.lenis {
   height: auto;
@@ -40,32 +38,31 @@ html.lenis {
   pointer-events: none;
 }
 
-
-@media only screen and (min-width:767px) {
-  .selected-projects:has(.selected-projects-image-container:hover) .selected-projects-image-container:not(:hover) .selected-projects-image-blur {
-    opacity:1;
-   transition-delay: 300ms;
+@media only screen and (min-width: 767px) {
+  .selected-projects:has(.selected-projects-image-container:hover)
+    .selected-projects-image-container:not(:hover)
+    .selected-projects-image-blur {
+    opacity: 1;
+    transition-delay: 300ms;
   }
 }
-
 
 .fade-in-section {
   transition: background-color 0.3s ease, color 0.3s ease;
   transition-delay: 100ms;
 }
 
-
 #footer {
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1; 
+  z-index: 1;
 }
 
 @media (max-width: 768px) {
   .footer-container {
-    height: 100vh
+    height: 100vh;
   }
 }
 
@@ -81,8 +78,6 @@ html {
   /* overflow: hidden; */
 }
 
-
-
 .menulink {
   line-height: 1 !important;
 }
@@ -92,7 +87,7 @@ html {
 }
 
 #menu.open {
-  transform: translateX(0)
+  transform: translateX(0);
 }
 
 .custom-full-height {
@@ -161,4 +156,14 @@ html {
   transition: opacity 300ms ease-in;
 
   opacity: 1;
+}
+
+.project-details {
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+.project--active .project-details {
+  opacity: 1;
+  transition-delay: 0.8s;
 }
