--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@ html.lenis {
 }
 
 .fade-in-section {
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.3s ease;
   transition-delay: 100ms;
 }
 
