--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ body {
 }
 
 .feature-pill {
-  @apply bg-[#F5F5F5] rounded-[5px] p-[10px] text-sm-xxs md:text-xxs w-fit
+  @apply bg-[#F5F5F5] flex items-center rounded-[5px] px-[10px] h-[25px] md:h-[30px] text-sm-xxs md:text-xxs w-fit
 }
 
 
@@ -138,22 +138,6 @@ html {
   object-fit: cover;
 }
 
-.vh-200 {
-  height: 500vh !important;
-}
-
-.red {
-  background-color: red;
-}
-.purple {
-  background-color: purple;
-}
-.blue {
-  background-color: blue;
-}
-.orange {
-  background-color: orange;
-}
 
 .fade-in {
   opacity: 0;
