--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ body {
   @apply bg-[#F5F5F5] flex items-center rounded-[5px] px-[10px] h-[25px] md:h-[30px] text-sm-xxs md:text-xxs w-fit
 }
 
-p {
+.update p {
   margin-bottom: 20px;
 }
 
