--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,13 @@ body {
 
 .update p {
   margin-bottom: 20px;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: 0.18px;
+  font-weight: 400;
 }
+
+
 
 .selected-projects-image-blur {
   background: rgba(255, 255, 255, 0.2);
