--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,9 @@ body {
  
 }
 
-
+.update strong {
+  font-weight: 500;
+}
 
 .selected-projects-image-blur {
   background: rgba(255, 255, 255, 0.2);
