--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,11 @@ body {
 }
 
 
+@media (max-width: 768px) {
+  .footer-container {
+      height: 100vh;
+  }
+}
 
 .feature-pill {
   @apply bg-[#F5F5F5] flex items-center rounded-[5px] px-[10px] h-[25px] md:h-[30px] text-sm-xxs md:text-xxs w-fit
@@ -73,19 +78,8 @@ html.lenis {
   transition-delay: 100ms;
 }
 
-#footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-}
 
-@media (max-width: 768px) {
-  .footer-container {
-    height: 100vh;
-  }
-}
+
 
 /** @format */
 * {
@@ -173,4 +167,20 @@ html {
 
 .projects-swiper .swiper-slide-visible {
   @apply !opacity-100;
+}
+
+
+.homeboy .swiper-pagination {
+  position: absolute;
+  bottom: 30px !important;
+}
+
+.homeboy .swiper-pagination-bullet-active {
+  background: #000 !important;
+}
+
+@media only screen and (max-width: 767px) {
+  .homeboy .swiper-pagination {
+   display: none;
+}
 }
