--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,7 @@ html.lenis {
 
 .selected-projects-image {
   transition: transform 0.3s ease; /* Smooth transition for the zoom effect */
+  height: 100%;
 }
 
 .selected-projects-image-link:hover .selected-projects-image {
